--- a/charts/index.html
+++ b/charts/index.html
@@ -3,40 +3,39 @@
 <head>
     <title></title>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="stylesheets/HeatMap.css" type="text/css"/>
-    <link rel="stylesheet" href="stylesheets/tipsy.css" type="text/css"/>
-    <script src="scripts/d3.js" type="text/javascript"></script>
-    <script src="scripts/chart-customerPerProvince.js" type="text/javascript"></script>
-    <script src="scripts/chart-claimsPerProvince.js" type="text/javascript"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.js"></script>
-    <script type="text/javascript" src="scripts/jquery.tipsy.js"></script>
+    <script src="http://d3js.org/d3.v3.js"></script>
+    <script type="text/javascript" src="scripts/sankey.js"></script>
+    <script type="text/javascript" src="scripts/chart-sankey.js"></script>
+    <style>
+        body {
+            font-family: sans-serif;
+        }
+        .node rect {
+            fill-opacity: .9;
+            shape-rendering: crispEdges;
+        }
+        .link {
+            fill: none;
+            stroke: #024;
+            stroke-opacity: .2;
+        }
+        .link:hover {
+            stroke-opacity: .5;
+        }
+    </style>
 </head>
 <body>
 <table>
     <tr>
-        <td>
-            <label id="lblCustomer" class="mainLbl">Customers by Province Heat Map</label>
-        </td>
-        <td>
-            <label id="lblCases" class="mainLbl">Claims by Province Heat Map</label>
-        </td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>
-            <div id="perCustomerContainer" class="svgcontainer"/>
-        </td>
-        <td>
-            <div id="perCaseContainer" class="svgcontainer"/>
+        <td style="column-span: 2">
+            <div id="sankeyChart"/>
         </td>
     </tr>
 </table>
 <script type="text/javascript">
-    createCustomerHeatMap();
-    createCasesHeatMap();
+   //createCustomerHeatMap();
+   //createCasesHeatMap();
+    createSankey();
 </script>
 </body>
 </html>
